<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/arkaPlan">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/spacing_mlarge"
        android:gravity="center"
        android:text="@string/waiting_for_air_pods"
        android:padding="0dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ntsregular"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/transparentText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="240dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/airpods_pro_case_not_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/todo" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginBottom="@dimen/spacing_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/podsbattery_banner_1">
    </com.google.android.gms.ads.AdView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_mlarge"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/spacing_mlarge"
        android:gravity="center"
        android:text="@string/please_wait"
        android:padding="0dp"
        android:includeFontPadding="false"
        android:fontFamily="@font/ntsbold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/buyPrem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_smlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_smlarge"
        app:cardBackgroundColor="@color/textKutusu"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_cards_color"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/spacing_xmedium">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/spacing_xmedium"
                app:lottie_fileName="premium.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <TextView
                android:id="@+id/buyPremText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/removeAds"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/turuncu" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_smlarge"
        android:layout_marginTop="@dimen/spacing_middle"
        android:layout_marginRight="@dimen/spacing_smlarge"
        app:cardBackgroundColor="@color/textKutusu"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buyPrem" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_cards_color"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/spacing_xmedium">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lotties"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/spacing_xmedium"
                app:lottie_fileName="setting.json"
                app:lottie_loop="true"
                app:lottie_autoPlay="true" />

            <TextView
                android:id="@+id/buyPremTexst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ntsbold"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:text="@string/title_settings"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
