<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/arkaPlan">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/imgExit"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:layout_marginEnd="20dp"
                android:padding="4dp"
                android:src="@drawable/ic_close_white"
                android:background="@drawable/background_market_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/todo"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:layout_marginTop="@dimen/spacing_xmedium"
                android:padding="@dimen/spacing_smlarge"
                android:src="@mipmap/ic_launcher"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo">
            </ImageView>

            <TextView
                android:layout_below="@id/logo"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:gravity="center"
                android:id="@+id/desc"
                android:layout_marginRight="@dimen/spacing_mlarge"
                android:layout_marginLeft="@dimen/spacing_mlarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/ntsregular"
                android:text="@string/app_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textColor="@color/item_menu_press" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:visibility="visible"
                android:layout_below="@id/desc"
                android:layout_marginTop="@dimen/spacing_middle"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/podsbattery_banner_1">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>